# create2-ros

create2_bringup/: CMakeLists.txt  package.xml
create2_bringup/launch/: minimal.launch
create2_description/: CMakeLists.txt  package.xml
create2_description/launch/: create2_rviz.launch
create2_description/robots/: create2_circles_kinect.urdf.xacro
create2_description/urdf/: create2_common_library.urdf.xacro  create_2.urdf.xacro  create_base.urdf.xacro  create_base_gazebo.urdf.xacro  kinect.urdf.xacro  kinect_properties.urdf.xacro
create2_description/urdf/create2/: create_2.urdf.xacro  create_base.urdf.xacro
create2_description/urdf/sensors/: kinect.urdf.xacro  kinect_gazebo.xacro  kinect_properties.urdf.xacro
create2_description/urdf/stacks/: circles.urdf.xacro
create2_gazebo/: CMakeLists.txt  package.xml
create2_gazebo/launch/: create2_world.launch
create2_navigation/: CMakeLists.txt  package.xml
create2_navigation/deprecated/: amcl_rviz.launch  gmapping_rviz.launch
create2_navigation/deprecated/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
create2_navigation/launch/: amcl_demo.launch  gmapping_demo.launch
create2_navigation/launch/includes/: move_base.launch.xml
create2_navigation/launch/includes/amcl/: amcl.launch.xml
create2_navigation/maps/: map.pgm  map.yaml  map01.pgm  map1.pgm  map2.pgm  map2.yaml  map3.pgm  map3.yaml  map4.pgm  map4.yaml  testMap.pgm  testMap.yaml
