<package>
  <name>create2_description</name>
  <version>1.0.0</version>
  <description>
     Create2 description package
  </description>
  <author>Trung Truong</author>
  <author email="ttruong91498@gmail.com">Trung Truong</author>
  <maintainer email="ttruong91498@gmail.com">Trung Truong</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>create_description</run_depend>
</package>
